--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,9 @@
   <meta name="apple-mobile-web-app-title" content="proiect_dac">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+<!--  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA-a_9XCelULwZK7fDHSY8aC9i9gLykq14"></script>-->
+
+
   <title>proiect_dac</title>
   <link rel="manifest" href="manifest.json">
 </head>
